--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.3.0",
+    "mongoose": ">=7.3.0 <7.5.0",
     "nodemon": "^3.0.1",
     "validator": "^13.9.0"
   }
